--- a/.gitignore
+++ b/.gitignore
@@ -134,6 +134,9 @@ dmypy.json
 data/curated/
 data/raw/
 data/landing/
+data/1. landing/
+data/2. raw/
+data/3. curated/
 
 # OSX .DS_Store file
 .DS_Store
