--- a/.gitignore
+++ b/.gitignore
@@ -129,9 +129,11 @@ dmypy.json
 .pyre/
 
 # data
-data/curated/
-data/raw/
-data/landing/
+data/1. landing/
+data/2. raw/
+data/3. curated/
+
+
 
 # OSX .DS_Store file
 .DS_Store
